buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id "org.jetbrains.intellij" version "1.17.3"
}

apply plugin: 'java'
apply plugin: 'idea'

sourceCompatibility = "17"
targetCompatibility = "17"

idea {
    project {
        jdkName = "17"
        languageLevel = "17"
    }
}


tasks.withType(JavaCompile) { options.encoding = 'UTF-8' }

repositories {
    mavenCentral()

}

runIde {
    minHeapSize = "512m";
    maxHeapSize = "3G";

    //jvmArgs '-Dsun.java2d.uiScale.enabled=true'
    //jvmArgs "-agentpath:C:/yjpagent.dll"
    jvmArgs "-Didea.ProcessCanceledException=disabled"
}

intellij {
    type.set("IC")
    version.set("2023.2.2")
    downloadSources.set(false)
    updateSinceUntilBuild.set(false)

    verifyPluginConfiguration {
        enabled = false
    }

    instrumentCode.set(false)

    plugins.addAll("java", "Kotlin")
}

dependencies {
    implementation 'com.squareup:javapoet:1.13.0'
}